--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -26,93 +26,52 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle"
                     android:text="@string/home"
-                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/team" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle_2"
                     android:text="@string/runs"
-                    android:textColor="@color/team"
                     android:textSize="@dimen/run_out" />
 
                 <TextView
                     android:id="@+id/runsHome"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle"
                     android:freezesText="true"
                     android:text="@string/initial"
-                    android:textColor="@color/score"
                     android:textSize="@dimen/nums" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle_2"
                     android:text="@string/outs"
-                    android:textColor="@color/team"
                     android:textSize="@dimen/run_out" />
 
                 <TextView
                     android:id="@+id/outsHome"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle_2"
                     android:freezesText="true"
                     android:text="@string/initial"
-                    android:textColor="@color/team"
                     android:textSize="@dimen/nums2" />
 
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/ButtonStyle.Margins"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@drawable/buttton_shape"
                     android:onClick="runScoreHome"
-                    android:shadowColor="@color/team"
-                    android:shadowDx="0"
-                    android:shadowDy="0"
-                    android:shadowRadius="5"
-                    android:text="@string/run"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp" />
+                    android:text="@string/run" />
 
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/ButtonStyle.Margins"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@drawable/buttton_shape"
                     android:onClick="outsHome"
                     android:shadowColor="@color/team"
-                    android:shadowDx="0"
-                    android:shadowDy="0"
-                    android:shadowRadius="5"
-                    android:text="@string/out"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp" />
+                    android:text="@string/out" />
 
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/ButtonStyle.Margins"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@drawable/buttton_shape"
                     android:onClick="grandSlamHome"
-                    android:shadowColor="@color/team"
-                    android:shadowDx="0"
-                    android:shadowDy="0"
-                    android:shadowRadius="5"
-                    android:text="@string/slam"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp" />
+                    android:text="@string/slam" />
 
             </LinearLayout>
 
@@ -128,93 +87,55 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle"
                     android:text="@string/visit"
-                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/team" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle_2"
                     android:text="@string/runs"
-                    android:textColor="@color/team"
                     android:textSize="@dimen/run_out" />
 
                 <TextView
                     android:id="@+id/runsVisitor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle"
                     android:freezesText="true"
                     android:text="@string/initial"
-                    android:textColor="@color/score"
                     android:textSize="@dimen/nums" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle_2"
                     android:text="@string/outs"
-                    android:textColor="@color/team"
                     android:textSize="@dimen/run_out" />
 
                 <TextView
                     android:id="@+id/outsVisitor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    style="@style/TextStyle.ColorStyle_2"
                     android:freezesText="true"
                     android:text="@string/initial"
-                    android:textColor="@color/team"
                     android:textSize="@dimen/nums2" />
 
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/ButtonStyle.Margins"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@drawable/buttton_shape"
                     android:onClick="runScoreVisitor"
-                    android:shadowColor="@color/team"
-                    android:shadowDx="0"
-                    android:shadowDy="0"
-                    android:shadowRadius="5"
-                    android:text="@string/run"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp" />
+                    android:text="@string/run" />
 
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/ButtonStyle.Margins"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@drawable/buttton_shape"
+
                     android:onClick="outsVisitor"
-                    android:shadowColor="@color/team"
-                    android:shadowDx="0"
-                    android:shadowDy="0"
-                    android:shadowRadius="5"
-                    android:text="@string/out"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp" />
+
+                    android:text="@string/out" />
 
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/ButtonStyle.Margins"
+
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@drawable/buttton_shape"
+
                     android:onClick="grandSlamVisitor"
-                    android:shadowColor="@color/team"
-                    android:shadowDx="0"
-                    android:shadowDy="0"
-                    android:shadowRadius="5"
-                    android:text="@string/slam"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp" />
+                    android:text="@string/slam" />
 
             </LinearLayout>
 
@@ -229,37 +150,23 @@
 
             <TextView
                 android:id="@+id/inningText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                style="@style/TextStyle.ColorStyle_2"
                 android:text="@string/in"
-                android:textColor="@color/team"
                 android:textSize="@dimen/run_out" />
 
             <TextView
                 android:id="@+id/inning"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                style="@style/TextStyle.ColorStyle_2"
                 android:freezesText="true"
-                android:text="@string/initial"
-                android:textColor="@color/score"
+                android:text="@string/initial_inning"
                 android:textSize="@dimen/nums2" />
 
             <Button
                 android:id="@+id/reset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/ButtonStyle"
                 android:layout_marginBottom="@dimen/tiny_margin"
-                android:background="@drawable/buttton_shape"
                 android:onClick="resetAll"
-                android:shadowColor="@color/team"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="@string/reset"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp" />
+                android:text="@string/reset" />
         </LinearLayout>
     </RelativeLayout>
 
