--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,36 @@
         <item name="colorButtonNormal">@color/colorAccent</item>
     </style>
 
+    <style name="ButtonStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/buttton_shape</item>
+        <item name="android:shadowColor">@color/team</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">0</item>
+        <item name="android:shadowRadius">5</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize">@dimen/button_text</item>
+    </style>
+
+    <style name="ButtonStyle.Margins">
+        <item name="android:layout_marginTop">@dimen/margin</item>
+        <item name="android:layout_marginLeft">@dimen/button_sides</item>
+        <item name="android:layout_marginRight">@dimen/button_sides</item>
+    </style>
+
+    <style name="TextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="TextStyle.ColorStyle">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="TextStyle.ColorStyle_2">
+        <item name="android:textColor">@color/team</item>
+    </style>
+
 </resources>
