--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -26,7 +26,9 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/home_team"
                     style="@style/TextStyle.ColorStyle"
+                    android:freezesText="true"
                     android:text="@string/home"
                     android:textSize="@dimen/team" />
 
@@ -87,7 +89,9 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/visitor_team"
                     style="@style/TextStyle.ColorStyle"
+                    android:freezesText="true"
                     android:text="@string/visit"
                     android:textSize="@dimen/team" />
 
@@ -124,16 +128,12 @@
                 <Button
                     style="@style/ButtonStyle.Margins"
                     android:layout_gravity="center"
-
                     android:onClick="outsVisitor"
-
                     android:text="@string/out" />
 
                 <Button
                     style="@style/ButtonStyle.Margins"
-
                     android:layout_gravity="center"
-
                     android:onClick="grandSlamVisitor"
                     android:text="@string/slam" />
 
