--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -34,7 +35,7 @@
 
                 <TextView
                     style="@style/TextStyle.ColorStyle_2"
-                    android:text="@string/runs"
+                    android:text="@string/mRuns"
                     android:textSize="@dimen/run_out" />
 
                 <TextView
@@ -97,7 +98,7 @@
 
                 <TextView
                     style="@style/TextStyle.ColorStyle_2"
-                    android:text="@string/runs"
+                    android:text="@string/mRuns"
                     android:textSize="@dimen/run_out" />
 
                 <TextView
