Refine logic to handle extra innings. Refine logic to handle special seven inning game.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -164,10 +164,15 @@
 
             <Button
                 android:id="@+id/reset"
-                style="@style/ButtonStyle"
+                style="@style/ButtonStyle.Margins"
                 android:layout_marginBottom="@dimen/tiny_margin"
                 android:onClick="resetAll"
                 android:text="@string/reset" />
+
+            <Button
+                style="@style/ButtonStyle.Margins"
+                android:onClick="sevenInnings"
+                android:text="@string/spec"/>
         </LinearLayout>
     </RelativeLayout>
 
