--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,16 +12,14 @@
     <style name="ButtonStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/buttton_shape</item>
+        <item name="android:background">@drawable/button_shape</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
         <item name="android:shadowColor">@color/team</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">0</item>
-        <item name="android:shadowRadius">5</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">2</item>
+        <item name="android:shadowRadius">3</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textSize">@dimen/button_text</item>
-    </style>
-
-    <style name="ButtonStyle.Margins">
         <item name="android:layout_marginTop">@dimen/margin</item>
         <item name="android:layout_marginLeft">@dimen/button_sides</item>
         <item name="android:layout_marginRight">@dimen/button_sides</item>
